# baml-for-graph-101

./: .env.example  .gitignore  00_extractor.py  01_create_schema.py  02_create_mergers_subgraph.py  03_create_acquisition_subgraph.py  04_entity_resolve.py  README.md  create_graph.sh  docker-compose.yml  pyproject.toml  requirements.txt
baml_client/: async_client.py  async_request.py  inlinedbaml.py  parser.py  partial_types.py  sync_client.py  sync_request.py  type_builder.py  types.py
baml_src/: acquisition.baml  classify.baml  clients.baml  commodity.baml  entity_resolve.baml  merger.baml
data/: acquisitions.json  articles.json  entities_resolved.csv  mergers.json
