[project]
name = "baml-for-graphs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "baml-py>=0.88.0",
    "kuzu>=0.10.0",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "yfiles-jupyter-graphs-for-kuzu>=0.0.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
